# pullDB

./: .editorconfig  .engineering-dna-baseline  .env.example  .gitattributes  .gitignore  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  .sqlfluff  .yamllint.yaml  CHANGELOG.md  DOCUMENT_UPDATE.md  IMPLEMENTATION-PLAN.md  MANIFEST.in  Makefile  PRODUCTION-RESTORE-LOG.md  README.md  RELEASE-FREEZE.md  RELEASE-NOTES-v0.0.1.md  RELEASE-NOTES-v0.0.10.md  RELEASE-NOTES-v1.0.0.md  RELEASE-NOTES-v1.0.1.md  RELEASE-NOTES-v1.0.7.md  RELEASE-NOTES-v1.0.8.md  STABILITY-EXIT-CRITERIA.md  STATUS-REPORT-2025-11-03.md  TWO-PHASE-VALIDATION.md  VALIDATION-COMPLETE.md  VALIDATION-REPORT.md  check_latest_backup_size.py  clear_settings.py  constitution.md  debug_config_and_s3.py  debug_creds.py  debug_db.py  debug_output.txt  debug_s3_prefix.py  deploy_procedure.py  install-pulldb-client.sh  install-pulldb-docker.sh  (+22 more)
.claude/: settings.json
.github/: copilot-instructions-behavior.md  copilot-instructions-business-logic.md  copilot-instructions-python.md  copilot-instructions-status.md  copilot-instructions-testing.md  copilot-instructions.md
.github/workflows/: css-manifest-check.yml  documentation-drift.yml  engineering-dna-baseline.yml  engineering-dna-freshness.yml  fail-hard-check.yml  permissions-audit.yml  release-build.yml  security-scan.yml  visual-baseline-upload.yml  visual-regression.yml  workspace-index-check.yml
.pulldb/: ATOMIC-RENAME-FIX-PLAN.md  BUGFIX-DELETE-RETRY-LIMIT.md  CONTEXT.md  FORCE-DELETE-UI-NOTES.md  HOSTNAME-DISPLAY-FIX.md  PROGRESS-BARS-PLAN.md  SESSION-LOG.md  SKIP-DATABASE-DROPS-FEATURE.md
.pulldb/automation/: __init__.py  demo_triage.py  prompt_augmenter.py  signal_extraction.py  triage_engine.py
.pulldb/extensions/: mysql-user-separation.md
.pulldb/gui-migration/: 00-CONTEXT.md  01-EXECUTIVE-SUMMARY.md  02-ARCHITECTURE.md  03-PR-BREAKDOWN.md  04-IMPLEMENTATION.md  05-TESTING.md  06-TROUBLESHOOTING.md  README.md  icon-inventory.json  pr0-css-audit.md  pr0-svg-audit.md
.pulldb/plans/: database-retention-cleanup.md  extraction-progress-ui.md
.pulldb/standards/: hca.md  (+3 more)
appalachian/: metadata
build_client/: README.md  pyproject.toml
build_client/src/pulldb/cli/: main.py  parse.py
compose/: .env.compose.example  docker-compose.yml
customers_after_sql/: 010.remove_customer_pii.sql  050.remove_payment_credentials.sql  060.disable_trigger_rules.sql  070.remove_gateways.sql  090.remove_office_hash.sql  100.reset_sendgrid.sql
design/: PHASE1-PLANNING.md  README.md  apptype-analysis.md  configuration-map.md  implementation-notes.md  milestone-2-plan.md  mock-system-plan.md  mock-system-tasks.md  phase-4-testing-plan.md  roadmap.md  runbook-failure.md  runbook-restore.md  runbook-throttle.md  security-model.md  staging-rename-pattern.md  system-overview.md  two-service-architecture.md  web-layout-wireframe.txt
dist-client/: pulldb_client-1.0.1-py3-none-any.whl  pulldb_client-1.0.3-py3-none-any.whl  pulldb_client-1.0.4-py3-none-any.whl  pulldb_client-1.0.5-py3-none-any.whl  pulldb_client-1.0.6-py3-none-any.whl  pulldb_client-1.0.7-py3-none-any.whl  pulldb_client-1.0.8-py3-none-any.whl
dist_client_package/: install.sh  pulldb_client-0.0.1-py3-none-any.whl
docker/: Dockerfile  entrypoint.sh  pulldb-mysql.cnf  supervisord.conf  wait-for-mysql.sh
docs/: AUDIT-AGENT.md  AUDIT-DISALLOWED-USERS-PLAN.md  AWS-SETUP.md  BRANCH-D-IMPLEMENTATION.md  BUTTON-AUDIT-CHECKLIST.md  CLIENT-PACKAGE-AUDIT-2026-01-08.md  CSS-HTML-AUDIT-2025-01-27.md  CUSTOM-TARGET-NAME-PLAN.md  DEAD-CODE-DETECTION-METHODOLOGY.md  DEBUG-PROJECT-REVIEW.md  DEBUG-SIMULATION-REVIEW.md  DESIGN-ENCYCLOPEDIA.md  DEV-BOX-ROUTING-SETUP.md  DEVELOPMENT-WORKFLOW.md  FAIL-HARD.md  FEATURE-REQUEST-DEV-TOOL-DESIGN.md  HCA-DOCUMENTATION-AUDIT.md  HCA-REMEDIATION-PLAN.md  HEARTBEAT-FIX-AUDIT-REPORT.md  HELP-PAGE-INDEX.md  IMPLEMENTATION-PLAN-METADATA-HEARTBEAT.md  KNOWLEDGE-POOL.json  KNOWLEDGE-POOL.md  METADATA-SYNTHESIS-OPTIMIZATION-PLAN.md  MULTI-COMPANY-REMEDIATION-PLAN.md  NEW-FEATURES-RESEARCH.md  NEW-PAGE-TEMPLATE.md  ORPHANED-OBSOLETE-AUDIT-2026-01-28.md  OVERLORD-AUDIT-2026-02-01.md  OVERLORD-AUDIT-FINDINGS.md  OVERLORD-COMPANIES-DESIGN-DOCUMENT.md  PACKAGE-AUDIT-2026-01-08.md  PHASE-6-SUMMARY.md  PROD-BAREMETAL-ROUTING-SETUP.md  PROD-SERVER-SETUP-RUNBOOK.md  SECRETS-MANAGER-SUMMARY.md  SETTINGS-REMEDIATION-PLAN.md  SETTINGS-SYSTEM.md  START-HERE.md  STYLE-GUIDE.md  (+50 more)
graph-tools/: README.md
migrations/: 20250101000000_initial_schema.sql  20250115000000_add_cancel_requested.sql  20250116000000_add_staging_cleaned.sql  20250120000000_seed_hosts.sql  20250121000000_seed_settings.sql  20250128000000_phase2_concurrency.sql  20251128051147_repair_missing_columns.sql  README.md
packaging/: CLIENT-README.md  INSTALL-UPGRADE.md  SERVICE-README.md  aws.config.example  env.example  pulldb-release-public.asc
pulldb/: __init__.py
schema/: pulldb.sql
scripts/: README.md  annotate_screenshots.py  apply_hostname_fix.sh  audit-permissions.sh  audit_inline_css.py  audit_inline_svgs.py  audit_theme_conformity.py  benchmark_atomic_rename.py  build_all.sh  build_client_deb.sh  build_client_package.sh  build_deb.sh  build_help_search_index.py  capture_admin_screenshots.py  capture_all_help_screenshots.py  capture_common_screenshots.py  capture_help_screenshots.py  capture_jobs_screenshots.py  capture_manager_screenshots.py  capture_profile_screenshots.py  capture_restore_screenshots.py  capture_styleguide.py  check_css_manifest.py  ci-permissions-check.sh  cleanup_dev_env.py  cleanup_system.sh  configure-pulldb.sh  configure_server.sh  debug_atomic_rename_silent_failure.py  deploy-and-test.sh  deploy-iam-templates.sh  deploy_atomic_rename.py  detect_dead_code.py  dev-rebuild.sh  dev_server.py  download_embedded_python.sh  ensure_fail_hard.py  generate_cloudshell.py  generate_workspace_index.py  git-changes.sh  (+45 more)
tests/: conftest.py  test_backup_metadata.py  test_css_visual_regression.py  test_restore_version_detection.py  test_worker_metadata_synthesis.py
tools/: feature-requests-review.py
(+973 files in other folders)
