[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulldb"
version = "0.1.0"
description = "pullDB - Development database restoration tool using production MySQL backups from S3"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [ { name = "PestRoutes Engineering" } ]
keywords = ["mysql", "restore", "s3", "backup", "dev"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "mysql-connector-python>=8.0.0",
  "boto3>=1.28.0",
  "click>=8.1.0",
  "requests>=2.32.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "types-boto3>=1.0.2",
  "bcrypt>=4.2.0",
  "jinja2>=3.1.0",
  "httpx>=0.28.0",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-timeout>=2.1.0",
  "mypy>=1.7.0",
  "ruff>=0.14.0",
  "pre-commit>=3.5.0",
  "sqlfluff>=3.0.0",
  "yamllint>=1.35.0",
  "shellcheck-py>=0.10.0",
  "mypy-boto3-s3>=1.34.0",
  "types-requests>=2.32.0.20241016"
]

[project.scripts]
pulldb = "pulldb.cli.main:main"
pulldb-admin = "pulldb.cli.admin:main"
pulldb-api = "pulldb.api.main:main"
pulldb-web = "pulldb.api.main:main_web"
pulldb-worker = "pulldb.worker.service:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pulldb*"]
namespaces = false

[tool.setuptools.package-data]
pulldb = [
    "web/static/**/*",
    "web/templates/**/*",
    "web/shared/**/*",
    "web/widgets/**/*",
    "template_after_sql/**/*",
]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unreachable = true
disallow_any_unimported = false
disallow_any_generics = false
exclude = ["pulldb/tests/", "scripts/precommit-verify.py", "venv/", ".venv/"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 88  # Black default, PEP 8 compatible

[tool.ruff.lint]
select = [
  "E","F","I","UP","B","C4","SIM","PL","RUF","W","N","D"
]
ignore = [
  "D203","D213"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["pulldb"]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"  # Google-style docstrings

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "PLR2004"]  # Ignore docstrings + magic value warnings in generic tests
"pulldb/tests/**/*.py" = ["D", "PLC0415", "PLR2004"]  # Allow scoped imports + magic constants

[tool.bandit]
exclude_dirs = ["tests", "pulldb/tests"]
skips = ["B101"]  # Skip assert_used check (needed for tests)

[tool.pytest.ini_options]
markers = [
    "integration: Integration tests (real database, real AWS)",
    "timeout: Test execution timeout (requires pytest-timeout)",
]
