[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulldb"
version = "1.3.0"
description = "pullDB - Development database restoration tool using production MySQL backups from S3"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [ { name = "PestRoutes Engineering" } ]
keywords = ["mysql", "restore", "s3", "backup", "dev"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
dependencies = [
  "mysql-connector-python>=8.0.0",
  "boto3>=1.28.0",
  "click>=8.1.0",
  "requests>=2.32.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
  "fastapi>=0.110.0,<0.135.0",
  "starlette>=0.27.0,<1.0.0",
  "uvicorn>=0.29.0",
  "types-boto3>=1.0.2",
  "bcrypt>=4.2.0",
  "cryptography>=42.0.0",
  "jinja2>=3.1.0",
  "httpx>=0.28.0",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-timeout>=2.1.0",
  "mypy>=1.7.0",
  "ruff>=0.14.0",
  "pre-commit>=3.5.0",
  "sqlfluff>=3.0.0",
  "yamllint>=1.35.0",
  "shellcheck-py>=0.10.0",
  "mypy-boto3-s3>=1.34.0",
  "types-requests>=2.32.0.20241016"
]

[project.scripts]
pulldb = "pulldb.cli.main:main"
pulldb-admin = "pulldb.cli.admin:main"
pulldb-api = "pulldb.api.main:main"
pulldb-web = "pulldb.api.main:main_web"
pulldb-worker = "pulldb.worker.service:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pulldb*"]
exclude = ["pulldb.tests", "pulldb.tests.*"]
namespaces = false

[tool.setuptools.package-data]
pulldb = [
    "web/static/**/*",
    "web/templates/**/*",
    "web/shared/**/*",
    "web/widgets/**/*",
    "web/help/**/*",
    "binaries/myloader-0.21.1-1",
    "images/*",
    "template_after_sql/**/*",
]

[tool.setuptools.exclude-package-data]
pulldb = [
    "tests/**/*",
    "binaries/*.tar",
    "binaries/*.txt",
    "binaries/*.log",
    "binaries/*.example",
    "binaries/mydumper-*",
    "binaries/myloader-0.9.5",
    "binaries/zstd-local/**",
    "binaries/*-auth",
    "binaries/dumps/**",
    "binaries/actiontermiteaz/**",
    "binaries/appalachian/**",
]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unreachable = true
disallow_any_unimported = false
disallow_any_generics = false
exclude = ["pulldb/tests/", "scripts/precommit-verify.py", "venv/", ".venv/"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 88  # Black default, PEP 8 compatible

[tool.ruff.lint]
select = [
  "E","F","I","UP","B","C4","SIM","PL","RUF","W","N","D"
]
ignore = [
  "D203","D213"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["pulldb"]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"  # Google-style docstrings

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "PLR2004"]  # Ignore docstrings + magic value warnings in generic tests
"pulldb/tests/**/*.py" = ["D", "PLC0415", "PLR2004"]  # Allow scoped imports + magic constants

[tool.bandit]
exclude_dirs = ["tests", "pulldb/tests"]
skips = ["B101"]  # Skip assert_used check (needed for tests)

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--tb=short",
    "--strict-markers",
    "-q",
]
asyncio_mode = "auto"
markers = [
    "unit: Fast unit tests (no I/O, all external calls mocked)",
    "integration: Integration tests (real database, real AWS)",
    "slow: Tests that take > 1 second",
    "timeout: Test execution timeout (requires pytest-timeout)",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["pulldb"]
exclude = [
    "**/build/**",
    "**/dist/**",
    "**/dist-client/**",
    "**/.venv/**",
    "**/.venv-test/**",
    "**/venv/**",
    "**/engineering-dna/**",
    "**/*.egg-info/**",
    "**/scripts/**",
    "**/tests/**",
    "**/typings/**",
    "**/logs/**"
]
# Type checking strictness - catch real bugs
reportMissingImports = "error"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
reportUnusedExpression = "warning"

# ---------------------------------------------------------------------------
# HCA Layer Enforcement via import-linter
# ---------------------------------------------------------------------------
# Ensures layers import only from same or lower layers.
# DIP exceptions: infra may import domain protocols/models/errors for
# implementing domain-defined interfaces (standard Dependency Inversion).
# Install: pip install import-linter
# Run: lint-imports
#
# Note: pulldb.worker.service (widgets) is part of pulldb.worker — import-linter
# cannot separate a parent/child into distinct layers. The core layers contract
# merges widgets+features into "pulldb.worker". A separate forbidden contract
# enforces that worker.service does not import from pages-layer modules.

[tool.importlinter]
root_packages = ["pulldb"]

[[tool.importlinter.contracts]]
name = "HCA Layer Isolation"
type = "layers"
layers = [
    "pulldb.cli",
    "pulldb.web",
    "pulldb.worker",
    "pulldb.domain",
    "pulldb.infra",
]
# Dependency Inversion Pattern (DIP) — infra implements domain protocols
ignore_imports = [
    "pulldb.infra.* -> pulldb.domain.interfaces",
    "pulldb.infra.* -> pulldb.domain.models",
    "pulldb.infra.* -> pulldb.domain.errors",
    "pulldb.infra.* -> pulldb.domain.config",
    "pulldb.infra.* -> pulldb.domain.overlord",
    "pulldb.infra.* -> pulldb.domain.validation",
    "pulldb.infra.* -> pulldb.domain.color_schemas",
    # DIP: infra.mysql_hosts uses PROTECTED_DATABASES constant from domain
    "pulldb.infra.mysql_hosts -> pulldb.domain.constants",
    # DIP: infra.bootstrap uses SETTING_REGISTRY (deferred import at runtime)
    "pulldb.infra.bootstrap -> pulldb.domain.settings",
    # Transitive DIP: infra.factory → simulation/auth → domain
    "pulldb.infra.factory -> pulldb.simulation",
    "pulldb.infra.factory -> pulldb.auth.repository",
    # TYPE_CHECKING only: factory.get_provisioning_service returns HostProvisioningService
    "pulldb.infra.factory -> pulldb.worker.provisioning",
    # Deprecated shim: domain.services re-exports from worker for backward compat
    "pulldb.domain.services -> pulldb.worker.enqueue",
]

# Widget boundary: worker.service must not import from pages-layer
[[tool.importlinter.contracts]]
name = "Widget Boundary (worker.service)"
type = "forbidden"
source_modules = ["pulldb.worker.service"]
forbidden_modules = ["pulldb.cli", "pulldb.web", "pulldb.api"]
