[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulldb-client"
version = "0.0.1"
description = "Client CLI for pullDB"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "requests>=2.32.0",
]

[project.scripts]
pulldb = "pulldb.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
